; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display_power.c_vlv_init_display_clock_gating.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/i915/display/extr_intel_display_power.c_vlv_init_display_clock_gating.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_i915_private = type { i64 }

@DSPCLK_GATE_D = common dso_local global i32 0, align 4
@DPOUNIT_CLOCK_GATE_DISABLE = common dso_local global i32 0, align 4
@VRHUNIT_CLOCK_GATE_DISABLE = common dso_local global i32 0, align 4
@MI_ARB_VLV = common dso_local global i32 0, align 4
@MI_ARB_DISPLAY_TRICKLE_FEED_DISABLE = common dso_local global i32 0, align 4
@CBR1_VLV = common dso_local global i32 0, align 4
@RAWCLK_FREQ_VLV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_i915_private*)* @vlv_init_display_clock_gating to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlv_init_display_clock_gating(%struct.drm_i915_private* %0) #0 {
  %2 = alloca %struct.drm_i915_private*, align 8
  %3 = alloca i32, align 4
  store %struct.drm_i915_private* %0, %struct.drm_i915_private** %2, align 8
  %4 = load i32, i32* @DSPCLK_GATE_D, align 4
  %5 = call i32 @I915_READ(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @DPOUNIT_CLOCK_GATE_DISABLE, align 4
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, %6
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* @VRHUNIT_CLOCK_GATE_DISABLE, align 4
  %10 = load i32, i32* %3, align 4
  %11 = or i32 %10, %9
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* @DSPCLK_GATE_D, align 4
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @I915_WRITE(i32 %12, i32 %13)
  %15 = load i32, i32* @MI_ARB_VLV, align 4
  %16 = load i32, i32* @MI_ARB_DISPLAY_TRICKLE_FEED_DISABLE, align 4
  %17 = call i32 @I915_WRITE(i32 %15, i32 %16)
  %18 = load i32, i32* @CBR1_VLV, align 4
  %19 = call i32 @I915_WRITE(i32 %18, i32 0)
  %20 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %21 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = icmp eq i64 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @WARN_ON(i32 %24)
  %26 = load i32, i32* @RAWCLK_FREQ_VLV, align 4
  %27 = load %struct.drm_i915_private*, %struct.drm_i915_private** %2, align 8
  %28 = getelementptr inbounds %struct.drm_i915_private, %struct.drm_i915_private* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = call i32 @DIV_ROUND_CLOSEST(i64 %29, i32 1000)
  %31 = call i32 @I915_WRITE(i32 %26, i32 %30)
  ret void
}

declare dso_local i32 @I915_READ(i32) #1

declare dso_local i32 @I915_WRITE(i32, i32) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @DIV_ROUND_CLOSEST(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
